Differentiate selectors by type